Update CSS - will return to refactor for different screen sizes, need to fix overflow.

--- a/public/projects.json
+++ b/public/projects.json
@@ -3,12 +3,12 @@
     "name": "BrainFlex",
     "live": "https://app.herokuapp.com/whatever",
     "git": "https://github.com/dustinowen/BrainFlex",
-    "image": ""
+    "image": "https://i.imgur.com/QRjsoGJ.png"
   },
   {
     "name": "Get Me Fit",
     "live": "",
-    "git": "",
-    "image": ""
+    "git": "https://github.com/dustinowen/Get-Me-Fit",
+    "image": "https://i.imgur.com/wegbIuW.png"
   }
 ]
